# algo_practice

./: .editorconfig  .gitignore  Cargo.toml  README.adoc  adoc-large-font-theme.yml  go.mod  pyproject.toml
.github/workflows/: go_test.yml  golang.yml  pytest.yml  python.yml
_guides/algorithms/: quick-select.adoc
_guides/asciidoc/: README.adoc
_guides/data-structures/: heap.adoc
_guides/system-design/: README.adoc  abstraction.adoc  api-design.adoc  auth.adoc  caching.adoc  cap-theorem.adoc  computer-networking.adoc  databases.adoc  dns.adoc  latency.adoc  messaging-streaming.adoc  observability.adoc
exercism/: bash-reverse-string.sh
hackerrank/: mini-max-sum.py  plus-minus.py  time-conversion.py
leetcode/: p-0002-add-two-numbers-cheeky.js  p-0002-add-two-numbers.py  p-0003-longest-substring-without-repeating-characters.py  p-0021-merge-two-sorted-lists-iterative.py  p-0021-merge-two-sorted-lists-recursive.py  p-0121-best-time-to-buy-and-sell-stock.py  p-0125-valid-palindrome.py  p-0142-linked-list-cycle-ii.py  p-0167-two-sum-ii-input-array-is-sorted-wip.py  p-0242-valid-anagram.py  p-0869-reordered-power-of-two.py  p-110-balanced-binary-tree.py  p-142-linked-list-cycle-ii.py  p-21-merge-two-sorted-lists-recursive.py  p-21-merge-two-sorted-lists.py  p-226-invert-binary-tree-recursive.py  p-235-lowest-common-ancestor-of-a-binary-search-tree.py  p-242-valid-anagram.py  p-53-maximum-subarray.py  p-704-binary-search.py  p-733-flood-fill.py
leetcode/0002-add-two-numbers/: basic_iterative.py
leetcode/0009-palindrome-number/: test_solutions_for_0009.py  two_pointers.py
leetcode/0014-longest-common-prefix/: list_based_trie.py  test_solutions_for_14.py  trie_fail_fast.py  trie_nooby.py
leetcode/0869-reordered-power-of-2/: integer_log.py  naive.py  single_one_in_binary_string.py  (+3 more)
mysql/: .env.dev  .shellcheckrc  README.adoc  README.md  compose.yml
python/: README.adoc
rust/: README.adoc
scratch/: traversal.py
(+157 files in other folders)
