[project]
name = "algo-practice"
version = "0.1.0"
description = "Python tooling for algorithm practice"
authors = [
    {name = "Colin", email = "colin.vandervoort.42@gmail.com"},
]
dependencies = [
    "docker>=7.1.0",
    "ruff>=0.9.6",
    "isort>=6.0.1",
    "pytest>=8.3.4",
    "cookiecutter>=2.6.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = [
    "python/solutions"
]
norecursedirs = [
    "_tools/cookiecutter/lc_py",
]
